--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [setting]
-NAME = mt
-USER = postgres
-PASSWORD = root
-HOST = 127.0.0.1
+NAME = mtrends
+USER = api_user
+PASSWORD = agu8xEmbjUPzoBsu
+HOST = 194.67.93.166
 PORT = 5432
