--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 psycopg2==2.8.6
-Django==3.1.4
 django-cors-headers==3.6.0
+certifi==2020.12.5
+chardet==4.0.0
+Django==3.1.4
+django-crispy-forms==1.7.2
+idna==2.7
+Pillow==5.2.0
+pytz==2018.5
+requests==2.19.1
+urllib3==1.23
 gunicorn
